--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -37,4 +37,7 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+  <!-- cloudinary  -->
+  <script src="//widget.cloudinary.com/global/all.js" type="text/javascript"></script>
+  <script src='//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js'></script>
 </html>
